[gd_scene load_steps=6 format=3 uid="uid://g1os55vj4wja"]

[ext_resource type="Script" uid="uid://nd337cuxlarv" path="res://barkley2/rooms/_debug/secret_breeding_place/gun_box.gd" id="1_54v2y"]
[ext_resource type="FontFile" uid="uid://bq5ct8srd86o6" path="res://barkley2/resources/fonts/fn5o.tres" id="2_dvprq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tqfm8"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.60038817, 0.60038817, 0.60038817, 0.25)

[sub_resource type="LabelSettings" id="LabelSettings_48ff5"]
font = ExtResource("2_dvprq")

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_48ff5"]
size = Vector2(49, 24)

[node name="gun_box" type="PanelContainer"]
offset_right = 156.0
offset_bottom = 90.0
theme_override_styles/panel = SubResource("StyleBoxFlat_tqfm8")
script = ExtResource("1_54v2y")

[node name="gun_container" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="gun_title_lbl" type="Label" parent="gun_container"]
custom_minimum_size = Vector2(148, 26)
layout_mode = 2
text = "Gun Top"
label_settings = SubResource("LabelSettings_48ff5")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="gun_texture" type="TextureRect" parent="gun_container"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_48ff5")
stretch_mode = 5

[node name="option_containers" type="VBoxContainer" parent="gun_container"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="option_type" type="OptionButton" parent="gun_container/option_containers"]
layout_mode = 2
tooltip_text = "Gun Type"
item_count = 1
popup/item_0/text = "Placeholder"
popup/item_0/id = 0

[node name="option_material" type="OptionButton" parent="gun_container/option_containers"]
layout_mode = 2
tooltip_text = "Gun Material"
item_count = 1
popup/item_0/text = "Placeholder"
popup/item_0/id = 0

[node name="gen_btn" type="Button" parent="gun_container"]
layout_mode = 2
text = "Genereate Gun"

[connection signal="pressed" from="gun_container/gen_btn" to="." method="_on_gen_btn_pressed"]
